[gd_scene load_steps=5 format=3 uid="uid://boafpwglnsajw"]

[ext_resource type="Script" path="res://scenes/experiment_1/experiment_1.gd" id="1_4ll4d"]
[ext_resource type="PackedScene" uid="uid://bpm0ebbgn2yt0" path="res://models/bubble/bubble.tscn" id="1_wrxr2"]
[ext_resource type="PackedScene" uid="uid://d4cmqk53ynl56" path="res://models/board/board.tscn" id="2_c1pti"]

[sub_resource type="Theme" id="Theme_yn7ku"]

[node name="Experiment 1 Scene 2D" type="Node2D"]
script = ExtResource("1_4ll4d")

[node name="Label" type="Label" parent="."]
offset_left = 4.0
offset_top = 5.0
offset_right = 116.0
offset_bottom = 29.0
text = "experiment 1"

[node name="Label2" type="Label" parent="."]
offset_left = 299.0
offset_top = 5.0
offset_right = 411.0
offset_bottom = 29.0
text = "drag behavior:"

[node name="board1" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(762, 562)
rotation = -2.8345

[node name="board2" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(455, 553)
rotation = -0.328467

[node name="board3" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(641, 579)
rotation = 0.173615

[node name="board4" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(513, 492)
rotation = -0.181009

[node name="board5" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(669, 485)
rotation = -0.467395

[node name="board9" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(526, 292)
rotation = 0.201593

[node name="board6" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(353, 422)
rotation = 2.52836

[node name="board10" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(369, 334)
rotation = -0.181009

[node name="board11" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(302, 513)
rotation = 0.184743

[node name="board7" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(569, 390)
rotation = 0.824361

[node name="board8" parent="." instance=ExtResource("2_c1pti")]
position = Vector2(770, 419)
rotation = 0.563207

[node name="Bubble" parent="." instance=ExtResource("1_wrxr2")]
position = Vector2(529, 624)

[node name="Bubble7" parent="." instance=ExtResource("1_wrxr2")]
position = Vector2(509, 589)

[node name="Bubble2" parent="." instance=ExtResource("1_wrxr2")]
position = Vector2(574, 625)
variant = 1

[node name="Bubble5" parent="." instance=ExtResource("1_wrxr2")]
position = Vector2(620, 626)
variant = 1

[node name="Bubble3" parent="." instance=ExtResource("1_wrxr2")]
position = Vector2(486, 625)
variant = 2

[node name="Bubble4" parent="." instance=ExtResource("1_wrxr2")]
position = Vector2(441, 624)
variant = 3

[node name="Bubble6" parent="." instance=ExtResource("1_wrxr2")]
position = Vector2(400, 629)
variant = 3

[node name="Button Main" type="Button" parent="."]
offset_left = 1078.0
offset_top = 7.0
offset_right = 1142.0
offset_bottom = 38.0
theme = SubResource("Theme_yn7ku")
text = "menu"

[node name="Button Reset" type="Button" parent="."]
offset_left = 1077.0
offset_top = 47.0
offset_right = 1141.0
offset_bottom = 78.0
theme = SubResource("Theme_yn7ku")
text = "reset"

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 416.0
offset_top = 5.0
offset_right = 540.0
offset_bottom = 32.0

[connection signal="pressed" from="Button Main" to="." method="_on_navigate_main"]
[connection signal="pressed" from="Button Reset" to="." method="_on_navigate_reset"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
